{
  "version": 4,
  "terraform_version": "1.9.6",
  "serial": 224,
  "lineage": "6da5131f-56b4-382c-ff4a-3db3c04cbd86",
  "resources": [
    {
      "module": "module.resources",
      "mode": "managed",
      "type": "aws_eip",
      "name": "elastic-ip-Nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-08c0f1a350073d4da",
            "arn": "arn:aws:ec2:us-east-1:315622882551:elastic-ip/eipalloc-08c0f1a350073d4da",
            "domain": "vpc",
            "id": "eipalloc-08c0f1a350073d4da",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-98-84-71-45.compute-1.amazonaws.com",
            "public_ip": "98.84.71.45",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.resources",
      "mode": "managed",
      "type": "aws_eip",
      "name": "elastic-ip-vm-publica",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0bf929cf918114a25",
            "arn": "arn:aws:ec2:us-east-1:315622882551:elastic-ip/eipalloc-0bf929cf918114a25",
            "association_id": "eipassoc-0f5764412b7067d31",
            "domain": "vpc",
            "id": "eipalloc-0bf929cf918114a25",
            "instance": "i-09dd5680f0ffb2da7",
            "network_border_group": "us-east-1",
            "network_interface": "eni-05262f1c5ee7e643a",
            "private_dns": "ip-10-0-0-7.ec2.internal",
            "private_ip": "10.0.0.7",
            "public_dns": "ec2-35-174-224-20.compute-1.amazonaws.com",
            "public_ip": "35.174.224.20",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "module.resources.aws_instance.VM_publica",
            "module.resources.aws_security_group.Ec2-publica",
            "module.resources.aws_subnet.sub_net_publica",
            "module.resources.aws_vpc.gourmet-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.resources",
      "mode": "managed",
      "type": "aws_instance",
      "name": "VM_privada",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-06640050dc3f556bb",
            "arn": "arn:aws:ec2:us-east-1:315622882551:instance/i-0cd76938acb9d183a",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0cd76938acb9d183a",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t1.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-06c3ee43bb742106f",
            "private_dns": "ip-10-0-0-144.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.144",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-041e969cd9b6bfbc0",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-0700a100f55882328"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-09eabfab173f71c87",
            "tags": {
              "name": "ubuntu-ec2"
            },
            "tags_all": {
              "name": "ubuntu-ec2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0700a100f55882328"
            ]
          },
          "dependencies": [
            "module.resources.aws_security_group.Ec2-privada",
            "module.resources.aws_subnet.sub_net_privada",
            "module.resources.aws_vpc.gourmet-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.resources",
      "mode": "managed",
      "type": "aws_instance",
      "name": "VM_publica",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-06640050dc3f556bb",
            "arn": "arn:aws:ec2:us-east-1:315622882551:instance/i-09dd5680f0ffb2da7",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-09dd5680f0ffb2da7",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t1.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-05262f1c5ee7e643a",
            "private_dns": "ip-10-0-0-7.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.7",
            "public_ip": "34.201.65.244",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0dd78f0e9c8b62d95",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-0910a16f7e4761664"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0108d4ca5a6df99c6",
            "tags": {
              "name": "ubuntu-ec2"
            },
            "tags_all": {
              "name": "ubuntu-ec2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0910a16f7e4761664"
            ]
          },
          "dependencies": [
            "module.resources.aws_security_group.Ec2-publica",
            "module.resources.aws_subnet.sub_net_publica",
            "module.resources.aws_vpc.gourmet-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.resources",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "internetGateway-gourmet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:315622882551:internet-gateway/igw-097f10055776e30e3",
            "id": "igw-097f10055776e30e3",
            "owner_id": "315622882551",
            "tags": {
              "name": "gourmetnternet-gateway"
            },
            "tags_all": {
              "name": "gourmetnternet-gateway"
            },
            "vpc_id": "vpc-0da6ae0c698899920"
          },
          "dependencies": [
            "module.resources.aws_vpc.gourmet-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.resources",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-08c0f1a350073d4da",
            "association_id": "eipassoc-0f49639dd955d07ee",
            "connectivity_type": "public",
            "id": "nat-01c1b2b1be0a90465",
            "network_interface_id": "eni-0087fbb86a8d824f8",
            "private_ip": "10.0.0.211",
            "public_ip": "98.84.71.45",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-09eabfab173f71c87",
            "tags": {
              "Name": "gourmet-nat"
            },
            "tags_all": {
              "Name": "gourmet-nat"
            }
          },
          "dependencies": [
            "module.resources.aws_eip.elastic-ip-Nat",
            "module.resources.aws_subnet.sub_net_privada",
            "module.resources.aws_vpc.gourmet-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.resources",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "aclPrivada",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:315622882551:network-acl/acl-08259e8b20c02a46c",
            "egress": [],
            "id": "acl-08259e8b20c02a46c",
            "ingress": [],
            "owner_id": "315622882551",
            "subnet_ids": [],
            "tags": null,
            "tags_all": {},
            "vpc_id": "vpc-0da6ae0c698899920"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.resources.aws_vpc.gourmet-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.resources",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "aclPublica",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:315622882551:network-acl/acl-0c8778072c20dd96a",
            "egress": [],
            "id": "acl-0c8778072c20dd96a",
            "ingress": [],
            "owner_id": "315622882551",
            "subnet_ids": [],
            "tags": null,
            "tags_all": {},
            "vpc_id": "vpc-0da6ae0c698899920"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.resources.aws_vpc.gourmet-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.resources",
      "mode": "managed",
      "type": "aws_network_acl_association",
      "name": "associateAclPrivada",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "aclassoc-00d5ab8834b8a3bf3",
            "network_acl_id": "acl-08259e8b20c02a46c",
            "subnet_id": "subnet-09eabfab173f71c87"
          },
          "dependencies": [
            "module.resources.aws_network_acl.aclPrivada",
            "module.resources.aws_subnet.sub_net_privada",
            "module.resources.aws_vpc.gourmet-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.resources",
      "mode": "managed",
      "type": "aws_network_acl_association",
      "name": "associateAclPublica",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "aclassoc-00bd2bdfa09e6259a",
            "network_acl_id": "acl-0c8778072c20dd96a",
            "subnet_id": "subnet-0108d4ca5a6df99c6"
          },
          "dependencies": [
            "module.resources.aws_network_acl.aclPublica",
            "module.resources.aws_subnet.sub_net_publica",
            "module.resources.aws_vpc.gourmet-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.resources",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "aclPrivadaRule1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "cidr_block": "10.0.0.0/25",
            "egress": false,
            "from_port": 22,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-1636454271",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-08259e8b20c02a46c",
            "protocol": "6",
            "rule_action": "allow",
            "rule_number": 100,
            "to_port": 22
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.resources.aws_network_acl.aclPrivada",
            "module.resources.aws_vpc.gourmet-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.resources",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "aclPrivadaRule2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "cidr_block": "10.0.0.0/25",
            "egress": false,
            "from_port": 80,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-4197384976",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-08259e8b20c02a46c",
            "protocol": "6",
            "rule_action": "allow",
            "rule_number": 101,
            "to_port": 80
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.resources.aws_network_acl.aclPrivada",
            "module.resources.aws_vpc.gourmet-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.resources",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "aclPrivadaRule3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "cidr_block": "10.0.0.0/25",
            "egress": false,
            "from_port": 443,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-2377241056",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-08259e8b20c02a46c",
            "protocol": "6",
            "rule_action": "allow",
            "rule_number": 102,
            "to_port": 443
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.resources.aws_network_acl.aclPrivada",
            "module.resources.aws_vpc.gourmet-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.resources",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "aclPublicaRule1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/25",
            "egress": false,
            "from_port": 22,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-3642977434",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-0c8778072c20dd96a",
            "protocol": "6",
            "rule_action": "allow",
            "rule_number": 103,
            "to_port": 22
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.resources.aws_network_acl.aclPublica",
            "module.resources.aws_vpc.gourmet-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.resources",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "aclPublicaRule2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/25",
            "egress": false,
            "from_port": 80,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-2914747669",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-0c8778072c20dd96a",
            "protocol": "6",
            "rule_action": "allow",
            "rule_number": 104,
            "to_port": 80
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.resources.aws_network_acl.aclPublica",
            "module.resources.aws_vpc.gourmet-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.resources",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "aclPublicaRule3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/25",
            "egress": false,
            "from_port": 443,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-907987322",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-0c8778072c20dd96a",
            "protocol": "6",
            "rule_action": "allow",
            "rule_number": 105,
            "to_port": 443
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.resources.aws_network_acl.aclPublica",
            "module.resources.aws_vpc.gourmet-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.resources",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "RouteTablePrivada",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:315622882551:route-table/rtb-093ffe1e982e2c349",
            "id": "rtb-093ffe1e982e2c349",
            "owner_id": "315622882551",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-01c1b2b1be0a90465",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0da6ae0c698899920"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.resources.aws_eip.elastic-ip-Nat",
            "module.resources.aws_nat_gateway.nat",
            "module.resources.aws_subnet.sub_net_privada",
            "module.resources.aws_vpc.gourmet-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.resources",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "RouteTablePublica",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:315622882551:route-table/rtb-072128dfabb22701f",
            "id": "rtb-072128dfabb22701f",
            "owner_id": "315622882551",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-097f10055776e30e3",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0da6ae0c698899920"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.resources.aws_internet_gateway.internetGateway-gourmet",
            "module.resources.aws_vpc.gourmet-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.resources",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "AssociateRouteTablePrivada",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05ed0ca007fb24f53",
            "route_table_id": "rtb-093ffe1e982e2c349",
            "subnet_id": "subnet-09eabfab173f71c87"
          },
          "dependencies": [
            "module.resources.aws_eip.elastic-ip-Nat",
            "module.resources.aws_nat_gateway.nat",
            "module.resources.aws_route_table.RouteTablePrivada",
            "module.resources.aws_subnet.sub_net_privada",
            "module.resources.aws_vpc.gourmet-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.resources",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "AssociateRouteTablePublica",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01e9a02f5aad19568",
            "route_table_id": "rtb-072128dfabb22701f",
            "subnet_id": "subnet-0108d4ca5a6df99c6"
          },
          "dependencies": [
            "module.resources.aws_internet_gateway.internetGateway-gourmet",
            "module.resources.aws_route_table.RouteTablePublica",
            "module.resources.aws_subnet.sub_net_publica",
            "module.resources.aws_vpc.gourmet-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.resources",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "Ec2-privada",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:315622882551:security-group/sg-0700a100f55882328",
            "description": "Allow SSH and HTTP connection from public subnet in us-east-2a",
            "egress": [],
            "id": "sg-0700a100f55882328",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/25"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/25"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "Ec2-privada",
            "name_prefix": "",
            "owner_id": "315622882551",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0da6ae0c698899920"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.resources.aws_vpc.gourmet-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.resources",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "Ec2-publica",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:315622882551:security-group/sg-0910a16f7e4761664",
            "description": "Allow SSH and HTTP connection from public subnet in us-east-1a",
            "egress": [],
            "id": "sg-0910a16f7e4761664",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "Ec2-publica",
            "name_prefix": "",
            "owner_id": "315622882551",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0da6ae0c698899920"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.resources.aws_vpc.gourmet-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.resources",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sub_net_privada",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:315622882551:subnet/subnet-09eabfab173f71c87",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.0.128/25",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09eabfab173f71c87",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "315622882551",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0da6ae0c698899920"
          },
          "dependencies": [
            "module.resources.aws_vpc.gourmet-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.resources",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sub_net_publica",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:315622882551:subnet/subnet-0108d4ca5a6df99c6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.0.0/25",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0108d4ca5a6df99c6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "315622882551",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0da6ae0c698899920"
          },
          "dependencies": [
            "module.resources.aws_vpc.gourmet-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.resources",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "gourmet-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:315622882551:vpc/vpc-0da6ae0c698899920",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/24",
            "default_network_acl_id": "acl-04f953dbb556488b4",
            "default_route_table_id": "rtb-0a192092b9dd66315",
            "default_security_group_id": "sg-0221d81a6e411900a",
            "dhcp_options_id": "dopt-0b84470489dc1f37b",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0da6ae0c698899920",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0a192092b9dd66315",
            "owner_id": "315622882551",
            "tags": {
              "Name": "gourmet-vpc"
            },
            "tags_all": {
              "Name": "gourmet-vpc"
            }
          }
        }
      ]
    }
  ]
}